fix text overflow

--- a/sass/menu_page.scss
+++ b/sass/menu_page.scss
@@ -94,6 +94,13 @@ body {
                         display: flex;
                         flex-direction: column;
                         gap: 5px;
+
+                        p{
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            max-width: 65vw;
+                        }
                     }
                     .menu__list__card__price{
                         position: relative;
@@ -106,7 +113,9 @@ body {
                             display: flex;
                             align-items: end;
                             font-weight: 700;
+                            padding-top: 25px;
                         }
+
                         span{
                             position: absolute;
                             display: flex;
